# ez826_demo

./: .gitignore
resnet18/: CMakeLists.txt  run.sh
resnet18/labels/: val.txt
resnet18/models/: resnet18.ezb  resnet18_51x.ezb
resnet18/src/: main.cpp  main_power.cpp
yolov5/: CMakeLists.txt  run.sh  t.py
yolov5/models/: yolov5s.ezb  yolov5s_51x.ezb
yolov5/src/: mAP.cpp  mAP.h  main.cpp  main_power.cpp  yolopost.cpp  yolopost.hpp
